<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_bar_height"
    android:orientation="horizontal">

    <com.lihb.babyvoice.customview.ColorFilterTextView
        android:id="@+id/title_left_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/title_left"
        android:textColor="@color/base_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title_center_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:lines="1"
        android:text="@string/title_Title"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <com.lihb.babyvoice.customview.ColorFilterTextView
        android:id="@+id/title_right_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingRight="10dp"
        android:text="@string/title_right"
        android:textColor="@color/base_color"
        android:textSize="18sp" />

</RelativeLayout>